--- a/HF/index.html
+++ b/HF/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>CBeGame | SlotGame</title>
+  <title>HomeFriends</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
   <meta name="viewport"
@@ -27,8 +27,8 @@
   <meta name="360-fullscreen" content="true"/>
   
   <!-- force screen orientation on some browser -->
-  <meta name="screen-orientation" content=""/>
-  <meta name="x5-orientation" content="">
+  <meta name="screen-orientation" content="portrait"/>
+  <meta name="x5-orientation" content="portrait">
 
   <!--fix fireball/issues/3568 -->
   <!--<meta name="browsermode" content="application">-->
@@ -37,30 +37,20 @@
   <!--<link rel="apple-touch-icon" href=".png" />-->
   <!--<link rel="apple-touch-icon-precomposed" href=".png" />-->
 
-  <link rel="stylesheet" type="text/css" href="style-mobile.c4c43.css"/>
-
+  <link rel="stylesheet" type="text/css" href="style-mobile.6e9cd.css"/>
+  <link rel="icon" href="favicon.8de18.ico"/>
 </head>
 <body>
   <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
-  <div id="splash" style="background-color:black;width:100%;height:100%;">
-
-    <div class="div1">
-        <div class="mask">
-            <div class="div2"></div>
-        </div>
-    </div>
-
-    <div class="progress-text">
-      <span>1 %</span>
-    </div>
-
-    <!-- <div class="progress-bar stripes">
+  <div id="splash">
+    <div class="progress-bar stripes">
       <span style="width: 0%"></span>
-    </div> -->
+    </div>
   </div>
+
 <script src="src/settings.10be7.js" charset="utf-8"></script>
 
-<script src="main.63132.js" charset="utf-8"></script>
+<script src="main.81ef9.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
@@ -69,19 +59,31 @@
         window.vConsole = new VConsole();
     }
 
+    var debug = window._CCSettings.debug;
     var splash = document.getElementById('splash');
     splash.style.display = 'block';
-    var cocos2d = document.createElement('script');
-    cocos2d.async = true;
-    cocos2d.src = window._CCSettings.debug ? 'cocos2d-js.js' : 'cocos2d-js-min.0eb30.js';
 
-    var engineLoaded = function () {
-        document.body.removeChild(cocos2d);
-        cocos2d.removeEventListener('load', engineLoaded, false);
+    function loadScript (moduleName, cb) {
+      function scriptLoaded () {
+          document.body.removeChild(domScript);
+          domScript.removeEventListener('load', scriptLoaded, false);
+          cb && cb();
+      };
+      var domScript = document.createElement('script');
+      domScript.async = true;
+      domScript.src = moduleName;
+      domScript.addEventListener('load', scriptLoaded, false);
+      document.body.appendChild(domScript);
+    }
+
+    loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.0eb30.js', function () {
+      if (CC_PHYSICS_BUILTIN || CC_PHYSICS_CANNON) {
+        loadScript(debug ? 'physics.js' : 'physics-min.b6620.js', window.boot);
+      }
+      else {
         window.boot();
-    };
-    cocos2d.addEventListener('load', engineLoaded, false);
-    document.body.appendChild(cocos2d);
+      }
+    });
 })();
 </script>
 </body>
